# polius_rl

./: .env.local.example  .gitignore  README.md  demo_environments.py  eval_lean_compare.py  package-lock.json  package.json  run_lean.sh  setup_and_run.sh  test_lean_local_model.py  train_pollius.py  train_pollius_torch.py
agent-skill/: SKILL.md  register.mjs
app/: globals.css  layout.tsx  page.tsx  providers.tsx
contracts/: Move.toml  Published.toml
environments/: .env.example  README.md  eval.sh  pyproject.toml
environments/enclave/: Dockerfile  README.md  build_deploy.sh  docker-compose.yml  requirements.txt  server.py
environments/sort-list/: sort_list.py
environments/sort_list/: pyproject.toml  sort_list.py
environments/tests/: test_mpp_judge0.py  test_mpp_llm.py  test_nautilus.py  test_orchestrator.py  test_rubric.py  test_service.py  test_solver.py  test_sui_client.py  test_verdict.py
environments/verifier/: epoch.py  llm.py  mpp_judge0.py  mpp_llm.py  nautilus.py  orchestrator.py  service.py  solver.py  sui_client.py  verdict.py
environments/verifier/deployed_envs/: 0d11ca78758b29ef.json  ebe39ff20d62f3f7.json  f9453cc5371a3af1.json  ff56755ad2e14999.json
lib/: protocol.ts  signature.ts  token.ts
pollius/: __init__.py  advantage.py  algorithms.py  config.py  core.py  losses.py  losses_torch.py  metrics.py  policy.py  registry.py  reward.py  rollout.py  trainer.py  trainer_torch.py  types.py  verifier.py
scripts/: demo.sh  issue-token.ts  mpp-record.ts  pollius-env.ts  withdraw-address-balance.ts
tests/: test_config_torch.py  test_policy.py  (+10 more)
(+128 files in other folders)
