[project]
name = "pollius-environments"
version = "0.0.0"
description = "Pollius off-chain RL environments (verifiers)"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "verifiers>=0.1.10",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
