[project]
name = "pollius-environments"
version = "0.0.0"
description = "Pollius off-chain RL environments (verifiers)"
requires-python = ">=3.11"
dependencies = [
    "coincurve>=21.0.0",
    "datasets>=5.0.0",
    "verifiers>=0.1.10",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
