[project]
name = "sort-list"
version = "0.1.0"
description = "Toy list-sorting verifiers environment"
requires-python = ">=3.11"
dependencies = ["verifiers", "datasets"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["sort_list.py"]
